# solys

./: .dockerignore  .gitignore  89-AUDIT-REPORT.md  ANCHORED_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE_SCHEMA.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.landing  FIX-BACKEND-525.md  GHWK.md  GSD_HELP.md  PUSH_COMMIT.md  README.md  SECURITY-AUDIT.md  SEMVER.md  STRATEGI.md  TEMP_CHANGELOG.md  WORKERS.md  app-login.txt  deny.toml  docker-compose.yml  install.ps1  install.sh  server-after-start.txt  server-detail.txt  server-files.txt  server-settings.txt  temp.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/profile/: README.md
.github/scripts/: package-deb.sh  package-rpm.sh  update-manifest.sh
.github/workflows/: canary.yml  ci.yml  docker-security.yml  release.yml  sbom.yml  scheduled-security.yml  security-scanners.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VERIFICATION-REPORT.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: SESSION_SUMMARY_2026-04-11.md  agent-not-in-dashboard.md  backend-create-server-null.md  change-agent-name-to-solys.md  checkpoint.md  cpu-metrics-zero.md  docker-exec-vs-agent.md  esluce-com-tsx-mime-type.md  file-manager-empty-directory.md  fix-compilation-errors.md  fix-dns-resolution-for-installer.md  gui-start-button-not-working.md  knowledge-base.md  lemon-squeezy-checkout-fix.md  logs-ansi-cleanup-first-load.md  logs-returns-null.md  logs-show-offline.md  metrics-still-near-zero.md  minecraft-dns-network-error.md  new-server-logs-and-stop.md  node-system-info-na.md  oauth-cors-502.md  oauth-returns-200-but-me-refresh-401.md  openapi-build-error.md  server-details-wrong-address-version-status.md  servers-filter.md  template-is-active-500.md  templates-server-details-empty.md  websocket-caddy-routing.md  websocket-metrics-near-zero.md
.planning/debug/resolved/: auto-account-switch.md  clickable-dashboard-cards.md  cloudflare-dns-fixes.md  game-type-missing.md  ip-port-missing.md  server-limit.md
.planning/phases/01-foundation-onboarding/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-SKELETON.md
.planning/phases/01-security-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-UAT.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Escluse-Bot/: DISCORD_BOT.md
agent/: .gitignore
agent/solys/: .gitignore  CHANGELOG.md
api/migrations/: 20260530000001_add_auto_wake.sql  20260530000002_add_restart_policy.sql  20260531_create_templates_table.sql
assets/: logo-escluse.xcf
compose/: docker-compose.yml
compose/docker/: Dockerfile
config/: grafana-dashboard.json  prometheus-scrape.yml
dev/: 01-prerequisites.md  02-setup.md  03-configuration.md  04-commands.md  05-troubleshooting.md
docker/: Dockerfile  web-agent
installer/: apikeypage.nsh  escluse-agent.nsi  license.txt
migration/: 20260218182547_servers_table.sql  20260219000001_create_servers_table.sql  20260219000002_create_server_events_table.sql  20260219000003_add_server_details.sql  20260219000004_create_server_metrics.sql  20260220000001_add_missing_fields.sql  20260220000005_create_alert_rules.sql  20260220000006_stateful_alerting.sql  20260220000007_add_server_ssh_fields.sql  20260222000001_add_container_name.sql  20260222162600_add_public_host.sql  20260222205804_add_mc_loader.sql  20260222213424_add_auto_pause.sql  20260223015400_add_mc_version.sql  20260223120610_add_ram_allocation.sql  20260302000001_add_discord_webhook.sql  20260302000002_create_backup_history.sql  20260302000003_add_backup_fields.sql  20260302000004_create_app_settings.sql  20260302000005_add_server_environment.sql  20260302000006_add_players_to_metrics.sql  20260307000001_add_enhanced_server_features.sql  20260308000001_add_git_remote_config.sql  20260309000001_create_nodes_tables.sql  20260309000002_add_node_id_to_servers.sql  20260309000003_create_node_metrics.sql  20260309000004_create_node_api_keys.sql  20260310000001_create_node_registration_tokens.sql  20260324000001_create_users_table.sql  20260324000002_create_api_keys_table.sql  20260324000003_create_agents_table.sql  20260324000004_create_plans_table.sql  20260324000005_create_subscriptions_table.sql  20260324000006_create_jobs_table.sql  20260324000007_create_audit_logs_table.sql  20260324000008_create_webhooks_table.sql  20260324000009_create_usage_tracking_table.sql  20260324000010_create_billing_tables.sql  20260325000001_make_audit_logs_immutable.sql  20260326000001_add_server_new_columns.sql  (+31 more)
opt/relay/: .env.example  Caddy.Dockerfile  Caddyfile  Cargo.toml  DEPLOY.md  Dockerfile  docker-compose.yml  relay-gateway.toml
opt/relay/src/: auth.rs  backend.rs  config.rs  error.rs  heartbeat.rs  main.rs  metrics.rs  player.rs  ratelimit.rs  registry.rs  session_log.rs  state.rs  tunnel.rs  types.rs
opt/umami/: .env.example  Caddyfile  docker-compose.yml
packaging/: escluse-agent.spec
src/: agent_connection.rs  audit.rs  config_watcher.rs  crash_reporter.rs  gui.rs  main.rs  rate_limit.rs  service_main.rs  startup.rs  state.rs  task_state.rs  updater.rs
src/agent/: result_sender.rs
src/api/: mod.rs  routes.rs
src/handlers/: backup.rs  connectivity.rs  direct_executor.rs  dns.rs  dns_watch.rs  files.rs  metrics.rs  mod.rs  rcon.rs  relay.rs  relay_client.rs  relay_session.rs  runtime.rs  sftp.rs  ssh.rs
test-solys/: escluse-agent-0.1.0-1.x86_64.rpm
tools/db-schema-gen/: Cargo.toml
tools/db-schema-gen/src/: domain_classifier.rs  introspector.rs  main.rs  markdown_builder.rs  mermaid_generator.rs  rustdoc_reader.rs  types.rs
tools/logsum/: Cargo.toml  logsum
worker/: .env.example  Cargo.toml  Dockerfile  config.rs
worker/src/: config.rs  cron_eval.rs  main.rs  prune.rs
worker/src/agent/: mod.rs
worker/src/queue/: mod.rs
worker/src/webhook/: emitter.rs  mod.rs
(+783 files in other folders)
