[workspace]
members = ["."]
exclude = ["api", "opt/relay"]

[package]
name    = "solys"
version = "0.4.15"
edition = "2021"
authors = ["Founder <founder.escluse@gmail.com>"]
license = "AGPL-3.0"
description = "Escluse Agent - Background service for managing game servers"
repository = "https://github.com/esclusehq/solys"

[dependencies]
# Agent core crates (via git for CI, patched to paths locally via .cargo/config.toml)
agent-proto      = { git = "https://github.com/esclusehq/agent-core" }
agent-config     = { git = "https://github.com/esclusehq/agent-core" }
agent-security   = { git = "https://github.com/esclusehq/agent-core" }
agent-event      = { git = "https://github.com/esclusehq/agent-core" }
agent-health     = { git = "https://github.com/esclusehq/agent-core" }
agent-capability = { git = "https://github.com/esclusehq/agent-core" }
agent-task       = { git = "https://github.com/esclusehq/agent-core" }
agent-metrics    = { git = "https://github.com/esclusehq/agent-core" }
agent-runtime    = { git = "https://github.com/esclusehq/agent-core" }
agent-backup     = { git = "https://github.com/esclusehq/agent-core" }
agent-rcon       = { git = "https://github.com/esclusehq/agent-core" }
agent-ssh        = { git = "https://github.com/esclusehq/agent-core" }

# Async runtime
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tokio-stream      = { version = "0.1", features = ["sync"] }
tokio-util        = { version = "0.7", features = ["compat"] }
futures           = "0.3"
futures-util      = "0.3"

# HTTP server (local API)
axum              = "0.8"
tower             = "0.5"
hyper            = "1"

# HTTP client for external API calls
reqwest          = { version = "0.12", features = ["json"] }

# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
bytes            = "1"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
uuid             = { version = "1", features = ["v4", "serde"] }
chrono           = { version = "0.4", features = ["serde"] }
thiserror        = "2"
anyhow           = "1"
lazy_static      = "1.4"

# Docker client
bollard         = "0.18"

# S3 for backup storage
rusoto_core    = "0.48"
rusoto_s3      = "0.48"

# Config file watcher
notify        = "6"

# TOML config support
toml          = "0.8"

# State persistence (D-02: XDG data directory)
dirs          = "5"

# File logging
tracing-appender = "0.2"

# System info
sysinfo       = "0.32"

# Use zlib-ng for cross-compile
libz-sys = { version = "1", features = ["zlib-ng-no-cmake-experimental-community-maintained"] }

# Network diagnostics for Phase 67 connectivity probe (D-04, D-07)
upnp-rs          = "0.2"
which             = "6"
local-ip-address = "0.6"

# Phase 68: Relay tunnel (WS + yamux framing + HMAC helpers)
tokio-yamux = "0.3"
base64      = "0.22"
hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"

# Phase 69-04: Heartbeat staggering via random jitter
rand = "0.8"

[[bin]]
name = "escluse-agent"
path = "src/main.rs"

[[bin]]
name = "escluse-service"
path = "src/service_main.rs"

[features]
default = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "winsvc", "winbase", "libloaderapi"] }
windows-service = "0.7"
tray-item = { version = "0.10" }
winit = { version = "0.29" }
softbuffer = { version = "0.4", default-features = false, features = ["x11", "wayland", "x11-dlopen", "wayland-dlopen"] }
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# D-18: Removed panic="abort" - no panics in production, proper error handling instead
overflow-checks = false

# Static build target - requires musl-gcc cross-compiler installed
# For fully static binary on systems without musl-gcc, use standard release
# [target.x86_64-unknown-linux-musl]
# linker = "musl-gcc"
