[package]
name = "relay-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relay-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tokio-yamux = "0.3"
futures = "0.3"
dashmap = "6"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
base64 = "0.22"
once_cell = "1"
rand = "0.8"
